# vSMR

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build-local.bat  conanfile.py
.github/workflows/: build.yml  plugin_version.ps1
scripts/: ci-smoke.ps1
vSMR/: CMakeLists.txt  CPDLCSettingsDialog.cpp  CPDLCSettingsDialog.hpp  Constant.hpp  InsetWindow.cpp  InsetWindow.h  Rimcas.cpp  Rimcas.hpp  SMRPlugin.cpp  SMRRadar.cpp  SMRRadar.hpp  resource.h  vSMR.rc  vSMR.vcxproj  vSMR_Profiles.json
vSMR/res/: afxres_compat.rc  vSMR.rc2
